Added Authentication and Authoriazation along with Jwt Bearer Token

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=shoshomediaapp.db"
   },
+  "TokenKey": "you cannot guess this key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
